package org.tictactoe.model;

public enum Symbol {
    X, O, EMPTY
}
