package org.tictactoe.view;

import java.awt.Graphics;

public interface Drawable {
    void draw(Graphics g);
}
