package org.tictactoe.view;

import org.tictactoe.model.Cell;

public class EmptyCellView extends CellView {
    public EmptyCellView(Cell cell) {
        super(cell);
    }
}
